# testTask_InfoTecs_CPPProgrammer

./: .gitignore  README.md
Logger/: CMakeLists.txt
Logger/include/Logger/: Loggable.cpp  Logger.h
Logger/src/: Loggable.h  Logger.cpp
Program1/: CMakeLists.txt
Program1/src/: main.cpp
Program1/src/DataProcessor/: DataProcessor.cpp  DataProcessor.h
Program1/src/NetworkConnecter/: NetworkConnecter.cpp  NetworkConnecter.h
Program1/src/Program1/: Program1.cpp  Program1.h
Program1/src/SharedBuffer/: SharedBuffer.cpp  SharedBuffer.h
Program2/: CMakeLists.txt
Program2/src/: main.cpp
Program2/src/DataProcessor/: DataProcessor.cpp  DataProcessor.h
Program2/src/NetworkConnecter/: NetworkConnecter.cpp  NetworkConnecter.h
Program2/src/Program2/: Program2.cpp  Program2.h
